Changes for 0.6.0:

* Fixed issue #15: ra::filesystem::readFile() and writeFile().
* Fixed issue #19: where() or which() function.
* Fixed issue #22: ra::filesystem::getFilenameWithoutExtension().
* Fixed issue #23: ra::environment::getEnvironmentVariables().
* Fixed issue #24: ra::user::getUsername().
* Fixed issue #25: Get current user system directories.
* Fixed issue #26: parseBoolean() and toString(bool).
* Fixed issue #27: createFolder() fails with absolute path.
* Fixed issue #28: ra::filesystem::makeRelativePath().
* Fixed issue #29: ra::filesystem::copyFile().
* Fixed issue #31: ra::environment::expand().
* Fixed issue #34: ra::filesystem::writeTextFile().
* Fixed issue #37: Move ra:gtesthelp::getTextFileContent() to ra::filesystem::readTextFileContent().

Changes for 0.5.0:

* New feature: Implemented ra::strings::trim() and ra::strings::reverse().
* New feature: Implemented console text color support.
* New feature: Implemented ra::filesystem::isAbsolutePath(), resolvePath(), getAbsolutePathFromExecutable() and getAbsolutePathFromCurrentDirectory().
* New feature: Implemented ra::environment::setEnvironmentVariable().
* New feature: Created `generics` namespace, a.k.a. popular templates.
* New feature: Created `console` namespace.
* New feature: Created `process` namespace.
* New feature: Normalized floating point values conversion to string: toStringLossless(), toStringLossy() or toStringFormatted().
* Fixed issue  #5: String format function.
* Fixed issue  #6: Implement getCurrentProcessPath() function.
* Fixed issue  #7: Function for absolute path to relative path.
* Fixed issue #11: joinString() fails if first element of list is an empty string.
* Fixed issue #12: Rename `strReplace()` to `replace()`.
* Fixed issue #13: Rename `parseValue()` to `parse()`.
* Fixed issue #14: Rename `splitString()` to `split()` and `joinString()` to `join()`.

Changes for 0.4.1:
